--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.3.6",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-validator": "^6.11.0",
     "is-empty": "^1.2.0",
